fix design card caroussel on mobile and add loader for caroussel style

--- a/Front/src/components/HomePage/AlbumCard/AlbumCard.scss
+++ b/Front/src/components/HomePage/AlbumCard/AlbumCard.scss
@@ -62,8 +62,9 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .AlbumCard {
-    width: 160px;
-    height: 160px;
+    width: 130px;
+    height: 130px;
+    margin: 0;
   }
 }
 
